Create ForwardPass class, break Backbufffer's Texture inheritance
ForwardPass class now contains draw code which resided in Renderer. This
was done to prevent code overflow while implementing rendering algorithms
in the project.

Introducing ForwardPass forced a requirement to render everything to
separate texture and copy results to Backbuffer. This allowed to break
Backbuffer's dependency from Texture class, which simplified a lot of
code.

--- a/ABench/ABench.vcxproj.filters
+++ b/ABench/ABench.vcxproj.filters
@@ -171,6 +171,9 @@
     <ClCompile Include="Math\Interpolation\LinearInterpolator.cpp">
       <Filter>Math\Interpolation</Filter>
     </ClCompile>
+    <ClCompile Include="Renderer\HighLevel\ForwardPass.cpp">
+      <Filter>Renderer\HighLevel</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Common\Window.hpp">
@@ -334,6 +337,9 @@
     </ClInclude>
     <ClInclude Include="Renderer\LowLevel\VkRAII.hpp">
       <Filter>Renderer\LowLevel</Filter>
+    </ClInclude>
+    <ClInclude Include="Renderer\HighLevel\ForwardPass.hpp">
+      <Filter>Renderer\HighLevel</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
