--- a/ABench/ABench.vcxproj
+++ b/ABench/ABench.vcxproj
@@ -215,6 +215,7 @@ copy /B "$(SolutionDir)Deps\freeimage\Dist\$(PlatformTarget)\FreeImage.dll" "$(T
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Renderer\HighLevel\DescriptorLayoutManager.cpp" />
+    <ClCompile Include="Renderer\HighLevel\ForwardPass.cpp" />
     <ClCompile Include="Renderer\HighLevel\GridFrustumsGenerator.cpp" />
     <ClCompile Include="Renderer\HighLevel\Renderer.cpp" />
     <ClCompile Include="Renderer\HighLevel\ResourceManager.cpp" />
@@ -279,6 +280,7 @@ copy /B "$(SolutionDir)Deps\freeimage\Dist\$(PlatformTarget)\FreeImage.dll" "$(T
     <ClInclude Include="PCH.hpp" />
     <ClInclude Include="Prerequisites.hpp" />
     <ClInclude Include="Renderer\HighLevel\DescriptorLayoutManager.hpp" />
+    <ClInclude Include="Renderer\HighLevel\ForwardPass.hpp" />
     <ClInclude Include="Renderer\HighLevel\GridFrustumsGenerator.hpp" />
     <ClInclude Include="Renderer\HighLevel\Renderer.hpp" />
     <ClInclude Include="Renderer\HighLevel\ResourceManager.hpp" />
