--- a/ABench/ABench.vcxproj.filters
+++ b/ABench/ABench.vcxproj.filters
@@ -174,6 +174,9 @@
     <ClCompile Include="Renderer\HighLevel\ForwardPass.cpp">
       <Filter>Renderer\HighLevel</Filter>
     </ClCompile>
+    <ClCompile Include="Renderer\HighLevel\DepthPrePass.cpp">
+      <Filter>Renderer\HighLevel</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Common\Window.hpp">
@@ -339,6 +342,9 @@
       <Filter>Renderer\LowLevel</Filter>
     </ClInclude>
     <ClInclude Include="Renderer\HighLevel\ForwardPass.hpp">
+      <Filter>Renderer\HighLevel</Filter>
+    </ClInclude>
+    <ClInclude Include="Renderer\HighLevel\DepthPrePass.hpp">
       <Filter>Renderer\HighLevel</Filter>
     </ClInclude>
   </ItemGroup>
