--- a/ABench/ABench.vcxproj.filters
+++ b/ABench/ABench.vcxproj.filters
@@ -177,6 +177,12 @@
     <ClCompile Include="Renderer\HighLevel\DepthPrePass.cpp">
       <Filter>Renderer\HighLevel</Filter>
     </ClCompile>
+    <ClCompile Include="Math\Frustum.cpp">
+      <Filter>Math</Filter>
+    </ClCompile>
+    <ClCompile Include="Math\AABB.cpp">
+      <Filter>Math</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Common\Window.hpp">
@@ -346,6 +352,18 @@
     </ClInclude>
     <ClInclude Include="Renderer\HighLevel\DepthPrePass.hpp">
       <Filter>Renderer\HighLevel</Filter>
+    </ClInclude>
+    <ClInclude Include="Math\Frustum.hpp">
+      <Filter>Math</Filter>
+    </ClInclude>
+    <ClInclude Include="Math\AABB.hpp">
+      <Filter>Math</Filter>
+    </ClInclude>
+    <ClInclude Include="Math\RingAverage.hpp">
+      <Filter>Math</Filter>
+    </ClInclude>
+    <ClInclude Include="Math\RingAverageImpl.hpp">
+      <Filter>Math</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
