--- a/ABench/ABench.vcxproj.filters
+++ b/ABench/ABench.vcxproj.filters
@@ -183,6 +183,12 @@
     <ClCompile Include="Math\AABB.cpp">
       <Filter>Math</Filter>
     </ClCompile>
+    <ClCompile Include="Scene\Component.cpp">
+      <Filter>Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="Renderer\HighLevel\LightCuller.cpp">
+      <Filter>Renderer\HighLevel</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Common\Window.hpp">
@@ -364,6 +370,9 @@
     </ClInclude>
     <ClInclude Include="Math\RingAverageImpl.hpp">
       <Filter>Math</Filter>
+    </ClInclude>
+    <ClInclude Include="Renderer\HighLevel\LightCuller.hpp">
+      <Filter>Renderer\HighLevel</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
