--- a/ABench/ABench.vcxproj
+++ b/ABench/ABench.vcxproj
@@ -148,7 +148,7 @@ copy /B "$(SolutionDir)Deps\fbxsdk\lib\vs2015\$(PlatformTarget)\$(Configuration)
       <PrecompiledHeaderFile>PCH.hpp</PrecompiledHeaderFile>
       <AdditionalIncludeDirectories>$(SolutionDir)Deps\fbxsdk\include;$(SolutionDir)Deps\vulkan;$(SolutionDir)Deps\freeimage\Dist\x64;$(SolutionDir)ABench;$(SolutionDir)Deps\glslang\build\$(PlatformTarget)\include</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;VK_USE_PLATFORM_WIN32_KHR;ABENCH_DEBUG_MEMORY;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <TreatWarningAsError>true</TreatWarningAsError>
+      <TreatWarningAsError>false</TreatWarningAsError>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -190,7 +190,7 @@ copy /B "$(SolutionDir)Deps\fbxsdk\lib\vs2015\$(PlatformTarget)\$(Configuration)
       <PrecompiledHeaderFile>PCH.hpp</PrecompiledHeaderFile>
       <AdditionalIncludeDirectories>$(SolutionDir)Deps\fbxsdk\include;$(SolutionDir)Deps\vulkan;$(SolutionDir)Deps\freeimage\Dist\x64;$(SolutionDir)ABench;$(SolutionDir)Deps\glslang\build\$(PlatformTarget)\include</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;VK_USE_PLATFORM_WIN32_KHR;ABENCH_DEBUG_MEMORY;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <TreatWarningAsError>true</TreatWarningAsError>
+      <TreatWarningAsError>false</TreatWarningAsError>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -303,10 +303,11 @@ copy /B "$(SolutionDir)Deps\fbxsdk\lib\vs2015\$(PlatformTarget)\$(Configuration)
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Renderer\HighLevel\DepthPrePass.cpp" />
-    <ClCompile Include="Renderer\HighLevel\DescriptorLayoutManager.cpp" />
     <ClCompile Include="Renderer\HighLevel\ForwardPass.cpp" />
     <ClCompile Include="Renderer\HighLevel\GridFrustumsGenerator.cpp" />
     <ClCompile Include="Renderer\HighLevel\LightCuller.cpp" />
+    <ClCompile Include="Renderer\HighLevel\ParticleEngine.cpp" />
+    <ClCompile Include="Renderer\HighLevel\ParticlePass.cpp" />
     <ClCompile Include="Renderer\HighLevel\Renderer.cpp" />
     <ClCompile Include="Renderer\HighLevel\ResourceManager.cpp" />
     <ClCompile Include="Renderer\HighLevel\ShaderMacroDefinitions.cpp" />
@@ -340,6 +341,7 @@ copy /B "$(SolutionDir)Deps\fbxsdk\lib\vs2015\$(PlatformTarget)\$(Configuration)
       <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Release|x64'">PCH.hpp</PrecompiledHeaderFile>
     </ClCompile>
     <ClCompile Include="Scene\Component.cpp" />
+    <ClCompile Include="Scene\Emitter.cpp" />
     <ClCompile Include="Scene\Light.cpp" />
     <ClCompile Include="Scene\Material.cpp" />
     <ClCompile Include="Scene\Mesh.cpp">
@@ -377,10 +379,11 @@ copy /B "$(SolutionDir)Deps\fbxsdk\lib\vs2015\$(PlatformTarget)\$(Configuration)
     <ClInclude Include="PCH.hpp" />
     <ClInclude Include="Prerequisites.hpp" />
     <ClInclude Include="Renderer\HighLevel\DepthPrePass.hpp" />
-    <ClInclude Include="Renderer\HighLevel\DescriptorLayoutManager.hpp" />
     <ClInclude Include="Renderer\HighLevel\ForwardPass.hpp" />
     <ClInclude Include="Renderer\HighLevel\GridFrustumsGenerator.hpp" />
     <ClInclude Include="Renderer\HighLevel\LightCuller.hpp" />
+    <ClInclude Include="Renderer\HighLevel\ParticleEngine.hpp" />
+    <ClInclude Include="Renderer\HighLevel\ParticlePass.hpp" />
     <ClInclude Include="Renderer\HighLevel\Renderer.hpp" />
     <ClInclude Include="Renderer\HighLevel\ResourceManager.hpp" />
     <ClInclude Include="Renderer\HighLevel\ShaderMacroDefinitions.hpp" />
@@ -409,6 +412,7 @@ copy /B "$(SolutionDir)Deps\fbxsdk\lib\vs2015\$(PlatformTarget)\$(Configuration)
     <ClInclude Include="ResourceDir.hpp" />
     <ClInclude Include="Scene\Camera.hpp" />
     <ClInclude Include="Scene\Component.hpp" />
+    <ClInclude Include="Scene\Emitter.hpp" />
     <ClInclude Include="Scene\Light.hpp" />
     <ClInclude Include="Scene\Material.hpp" />
     <ClInclude Include="Scene\Mesh.hpp" />
